# drf_ddd_order_app

./: .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
order_app/domain/user/: user.py
order_app/infrastructure/: bootstrap.py  manage.py
order_app/infrastructure/order_mgmt/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
order_app/infrastructure/product_mgmt/: apps.py
order_app/infrastructure/user_mgmt/: apps.py  models.py  user_repository.py  user_uow.py  views.py
order_app/infrastructure/user_mgmt/migrations/: 0001_initial.py
order_app/repository/: uow.py  user_repository.py
order_app/services/: user_service.py
order_app/utility/: jwt.py  singleton.py
